--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://th33gr00t.blogspot.com/feeds/posts/default?alt=rss"
+          feed_list: "https://th33gr00t.blogspot.com/feeds/posts/default"
